[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symbol"

version = "1.0.0"

authors = [
  { name="stephen", email="stpirpinias@gmail.com" },
]

description = "Symbol"

readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "dataclasses_json",
    "polars",
    "pandas",
]

license = "MIT"

[project.optional-dependencies]
dev = ["flake8", "hatch"]